Worked on the experimental feature for the nav bar to fix the selected item from moving around too much after update
Code Review by Kevin

--- a/internal/webapp/nav/betanav.css
+++ b/internal/webapp/nav/betanav.css
@@ -81,6 +81,9 @@
     padding: 5px 50px 10px 10px;
 }
 
+.maintainHover {
+    color: #ffffff;
+}
 .nav-buttons {
     margin-top: 10px;
 }
